--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Wiki Search</title>
+    <title>Wiki Search</title>
+    <link rel="stylesheet" type="text/css" href="css/wiki.css">
 </head>
+
 <body>
-<input type="text" placeholder="Search" name="wiki search" autofocus="">
+    <div class="search-bar">
+        <input type="text" placeholder="Search" name="wiki search" autofocus="">
+        <div class="search-icon">
+        <button><img src="img/search.png"></button>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/wiki.js"></script>
 </body>
+
 </html>
