Styled Search bar and button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="search-bar">
-        <input type="text" placeholder="Search" name="wiki search" autofocus="">
+        <input type="search" placeholder="Search..." name="wiki search" autofocus="">
         <div class="search-icon">
         <button><img src="img/search.png"></button>
         </div>
