more UI changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="search-bar">
+    <h2 class="instructions">Wiki Articles:</h2>
         <input type="search" id="searchanything" placeholder="Search..." name="wiki search" autofocus="">
         <!--<div class="search-icon">
         <button id="search"><img src="img/search.png"></button>
